# monoos

./: CMakeLists.txt  README.md  configure.cmd  linker.ld  run.cmd  toolchain-arm.cmake
boot/: CMakeLists.txt
boot/aarch32/: CMakeLists.txt
doc/: kernel.drawio
hal/: README
kernel/: CMakeLists.txt  kernel.cmake  linker.ld
sdk/: header.h
sdk/cmake/: config.cmake
